another attempt to fix body scrolling in modal  background on ios - with overscroll-behavior: contain

--- a/src/styles.css
+++ b/src/styles.css
@@ -10,6 +10,7 @@ body {
 
 body.modal-open {
     overflow-y: hidden;
+    overscroll-behavior: contain;
 }
 
 ul, ol {
